--- a/accountdialog.ui
+++ b/accountdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>790</width>
-    <height>401</height>
+    <width>792</width>
+    <height>415</height>
    </rect>
   </property>
   <property name="palette">
@@ -197,14 +197,14 @@
      <x>15</x>
      <y>10</y>
      <width>761</width>
-     <height>381</height>
+     <height>401</height>
     </rect>
    </property>
    <property name="layoutDirection">
     <enum>Qt::RightToLeft</enum>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -247,7 +247,7 @@
        <x>260</x>
        <y>10</y>
        <width>471</width>
-       <height>61</height>
+       <height>87</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout">
@@ -259,7 +259,21 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="accNum"/>
+       <widget class="QLineEdit" name="accNum">
+        <property name="styleSheet">
+         <string notr="true">QLineEdit
+{
+border-radius:7px;
+border:2px solid black;
+padding:5px;
+}
+QLineEdit:focus
+{
+border:3px solid #55a;
+}
+</string>
+        </property>
+       </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
@@ -269,7 +283,21 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="amount"/>
+       <widget class="QLineEdit" name="amount">
+        <property name="styleSheet">
+         <string notr="true">QLineEdit
+{
+border-radius:7px;
+border:2px solid black;
+padding:5px;
+}
+QLineEdit:focus
+{
+border:3px solid #55a;
+}
+</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -279,7 +307,7 @@
        <x>20</x>
        <y>300</y>
        <width>694</width>
-       <height>27</height>
+       <height>45</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -298,6 +326,18 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_2">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton {background-color:#555; border-radius: 5px; color: white; padding:10px 20px 10px 20px;}
+QPushButton:hover
+{
+  background-color:#777;
+border:1px solid #333
+}
+</string>
+        </property>
         <property name="text">
          <string>انصراف</string>
         </property>
@@ -305,6 +345,18 @@
       </item>
       <item>
        <widget class="QPushButton" name="transferBtn">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton {background-color:#555; border-radius: 5px; color: white; padding:10px 20px 10px 20px;}
+QPushButton:hover
+{
+  background-color:#777;
+border:1px solid #333
+}
+</string>
+        </property>
         <property name="text">
          <string>انتقال</string>
         </property>
@@ -335,7 +387,13 @@
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="transactions10"/>
+       <widget class="QListWidget" name="transactions10">
+        <property name="font">
+         <font>
+          <family>B Yekan</family>
+         </font>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -432,6 +490,18 @@
            </item>
            <item>
             <widget class="QPushButton" name="cardbtn">
+             <property name="cursor">
+              <cursorShape>PointingHandCursor</cursorShape>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton {background-color:#555; border-radius: 5px; color: white; padding:10px 20px 10px 20px;}
+QPushButton:hover
+{
+  background-color:#777;
+border:1px solid #333
+}
+</string>
+             </property>
              <property name="text">
               <string>درخواست کارت</string>
              </property>
@@ -481,7 +551,7 @@
        <x>590</x>
        <y>10</y>
        <width>152</width>
-       <height>73</height>
+       <height>105</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
@@ -515,6 +585,19 @@
       </item>
       <item row="2" column="0">
        <widget class="QPushButton" name="pushButton">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton {background-color:#555; border-radius: 5px; color: white; padding:10px 20px 10px 20px;}
+QPushButton:hover
+{
+  background-color:#777;
+border:1px solid #333
+}
+
+</string>
+        </property>
         <property name="text">
          <string>دریافت رمز پویا</string>
         </property>
