Finaly Finished , UI Bugs(pending card & accounts in admin pannel...) fixed , Payment added

--- a/adduser.ui
+++ b/adduser.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>افزودن کاربر</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>E:/icons/user.png</normaloff>E:/icons/user.png</iconset>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
@@ -29,7 +33,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
