--- a/addaccountdialog.ui
+++ b/addaccountdialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>افزودن حساب</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>E:/icons/bank-account.png</normaloff>E:/icons/bank-account.png</iconset>
+  </property>
   <property name="layoutDirection">
    <enum>Qt::RightToLeft</enum>
   </property>
