--- a/adminpanel.ui
+++ b/adminpanel.ui
@@ -463,7 +463,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>icons/admin-ui (1).png</normaloff>icons/admin-ui (1).png</iconset>
+    <normaloff>E:/icons/admin.png</normaloff>E:/icons/admin.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -715,6 +715,9 @@ border-radius:7px;
 font-family:B Yekan
 }</string>
           </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
           <property name="showGrid">
            <bool>false</bool>
           </property>
@@ -809,7 +812,7 @@ border:1px solid #333
           </property>
           <property name="styleSheet">
            <string notr="true">QTableView {border: 3px solid #5E749C;text-align: top;padding: 4px;border-radius: 7px;border-bottom-left-radius: 7px;background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 #4158d0, stop: 1 #4158d0,stop: 0.9 rgb(240, 216, 255) ,stop: 1 rgb(240, 216, 255));width: 15px;}
-QTableView::item:focus{background-color: #555;color:white;border-bottom:2px solid red;}QTableView::item{text-align:center;border:1px solid blue; border-right:none;border-left:none}QTableView::item:hover{background-color: #777;color:white;}
+QTableView::item:focus{background-color: #555;color:white;border-bottom:2px solid red;}QTableView::item{text-align:center;border-bottom:1px solid blue;}QTableView::item:hover{background-color: #777;color:white;}
 QHeaderView {
     line-height: 1.4;
     background-color: #002933;
@@ -826,6 +829,9 @@ border-radius:7px;
 font-family:B Yekan
 
 }</string>
+          </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
           </property>
           <property name="showGrid">
            <bool>false</bool>
@@ -990,6 +996,9 @@ font-family:B Yekan
 
 }</string>
           </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
           <property name="showGrid">
            <bool>false</bool>
           </property>
@@ -1095,6 +1104,9 @@ font-family:B Yekan
 
 }</string>
           </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
           <property name="showGrid">
            <bool>false</bool>
           </property>
@@ -1127,7 +1139,7 @@ font-family:B Yekan
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="styleSheet">
-             <string notr="true">QPushButton {background-color:#933; border-radius: 5px; color: white; padding:10px 20px 10px 20px;}
+             <string notr="true">QPushButton {background-color:#933; border-radius: 5px; color: white; padding:10px 25px 10px 25px;}
 QPushButton:hover
 {
   background-color:#a44;
@@ -1151,7 +1163,7 @@ border:1px solid #333
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="styleSheet">
-             <string notr="true">QPushButton {background-color:#393; border-radius: 5px; color: white; padding:10px 20px 10px 20px;}
+             <string notr="true">QPushButton {background-color:#393; border-radius: 5px; color: white; padding:10px 25px 10px 25px;}
 QPushButton:hover
 {
   background-color:#4a4;
